--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Libro Romántico</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
   <canvas id="particles"></canvas>
@@ -15,69 +16,53 @@
       <!-- Portada -->
       <div class="spread">
         <div class="page left cover">
-          <h1 class="fade-in">💕 Mi Libro de Amor 💕</h1>
-          <p class="fade-in delay">Una colección de poemas que florecen en cada página...</p>
+          <h1 class="fade-in">💕 Mi Libro para</h1> <h1 class="fade-in">Mi Amorcito 💕</h1>
+          <p class="fade-in delay">Una colección de frases para mi amorcito...</p>
         </div>
         <div class="page right cover">
-          <h2 class="fade-in">Autor: Tu Nombre</h2>
-          <p class="fade-in delay">Ilustrado con pétalos y versos...</p>
+          <h2 class="fade-in">Autor: Tu novio que te ama mucho ❤️</h2>
+          <p class="fade-in delay">Ilustrado con pétalos y palabras...</p>
         </div>
       </div>
 
       <!-- Página 1 y 2 -->
       <div class="spread">
         <div class="page left">
-          <h2>Poema 1</h2>
-          <p class="typewriter">Tu mirada es mi refugio en los días de tormenta suave...</p>
+          <h2>Me encantas, amor</h2>
+          <p class="typewriter">Amorcito, cómo me encantas. Eres lo mejor </p> <p class="typewriter">de mi vida...</p>
         </div>
         <div class="page right">
-          <h2>Poema 2</h2>
-          <p class="typewriter">Si el viento me hablara de amor, usaría tu voz para hacerlo.</p>
-        </div>
-      </div>
-
-      <!-- Página 3 y 4 -->
-      <div class="spread">
-        <div class="page left">
-          <h2>Poema 3</h2>
-          <p class="typewriter">Tus abrazos son abrigo eterno, aun en veranos infinitos.</p>
-        </div>
-        <div class="page right">
-          <h2>Poema 4</h2>
-          <p class="typewriter">Eres la tinta que escribe mis días y la melodía de mis noches.</p>
+          <h2>Eres tan especial, mi vida</h2>
+          <p class="typewriter">Te amo a más no poder, mi amor...</p>
         </div>
       </div>
 
       <!-- Página 5 y 6 -->
       <div class="spread">
         <div class="page left">
-          <h2>Poema 5</h2>
-          <p class="typewriter">Tu risa es un amanecer que florece en mi corazón.</p>
+          <h2>Es indescriptible</h2>
+          <p class="typewriter">Eres tan especial que no encuentro </p> <p class="typewriter">palabras para explicarlo.</p>
         </div>
         <div class="page right">
-          <h2>Poema 6</h2>
-          <p class="typewriter">En tus ojos vive un universo donde siempre quiero perderme.</p>
+          <h2>No dudes de mi amor</h2>
+          <p class="typewriter">Porque en serio es verdadero,</p> 
+          <p class="typewriter">es algo que siento desde lo profundo </p> 
+          <p class="typewriter">de mi corazón.</p>
         </div>
       </div>
 
       <!-- Página 7 y 8 -->
       <div class="spread">
         <div class="page left">
-          <h2>Poema 7</h2>
-          <p class="typewriter">Tus pasos dibujan senderos donde siempre quiero caminar.</p>
+          <h2>Te amo</h2>
+          <p class="typewriter">Te amo como no tienes idea.</p>
         </div>
         <div class="page right">
-          <h2>Final</h2>
-          <p class="typewriter">Escucha el ritmo de nuestro amor...</p>
-          <iframe style="border-radius:12px"
-            src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcCnTAt8CfNe?utm_source=generator"
-            width="100%" height="152" frameborder="0"
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy">
-          </iframe> 
+          <h2>❤️❤️❤️</h2>
+          <p class="typewriter">Y con este amor te dedico esta playlist ❤️</p>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5sbOOUMqglHBW0mV2OtYLb?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
-
     </div>
   </div>
 
