--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="spread">
         <div class="page left">
           <h2>Me encantas, amor</h2>
-          <p class="typewriter">Amorcito, cómo me encantas. Eres lo mejor </p> <p class="typewriter">de mi vida...</p>
+          <p class="typewriter">Amorcito, cómo me encantas. </p> <p class="typewriter">Eres lo mejor de mi vida...</p>
         </div>
         <div class="page right">
           <h2>Eres tan especial, mi vida</h2>
@@ -75,3 +75,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
